fixed the header spacing at over 600px and made the basket smaller. Changed some header labels to make the document more readable

--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ h3{
     order:-1;
     width: 50%;
     display: flex;
+
  
   }
 
@@ -142,7 +143,7 @@ h3{
 
      }
 
-.banner h3 span{
+.banner span{
     color:#FFFFFF;
     text-transform: uppercase;
 }
@@ -156,7 +157,7 @@ body{
 }
 
 
-h1, h2, h3, h4 {
+h1, h2, h3 {
 
     font-family: "Playfair Display";
     color:  #2d2d2d;
@@ -176,13 +177,13 @@ margin: 0 2rem;
 font-weight: 100;
 font-size: 1.5rem;
 }
-.handcrafted h3{
+.handcrafted h2{
 
     text-align: center;
     font-size: 3rem;
 }
 
-.handcrafted h3 span{
+.handcrafted h2 span{
     font-weight: 100;
     font-style: italic;
 }
@@ -329,7 +330,6 @@ width:100%
     width: 100vw;
     min-height: 320px;
     text-align: center;
-    max-width: 1240px;
 
 
 }
@@ -378,10 +378,9 @@ width:100%
 
 form{
     width: 100%;
-    max-width: 600px;
     height: 2em;
     display: flex;
-    flex: 2;
+    justify-content: center;
     
 
 }
@@ -492,12 +491,13 @@ footer{
         width: 30%
      }
      .primary-nav{
-        width: 40%;
+        width: max-content;
         display: flex;
      }
      .cart{
         order: 2;
-        width: 30%;
+        width: 10%;
+        max-width: 70px;
      }
      body{
         font-family: "Raleway", Arial, sans-serif;
@@ -560,8 +560,8 @@ footer{
     .carousel-cell{
 width: 25%;
     }
-   
-    }
+
+    
    
     
  
